[w2zpXJmt] refactor: replace List.of with Arrays.asList for order creation in BookstoreTest